# configbot

./: __init__.py  chat.py  configbot_prompt.txt  main.py  requirements.txt
agent/: __init__.py  core.py
configbot2.0/: chat.py  example_tools.txt  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
configbot2.0/configbot/: chat.py  configbot_prompt.txt  main.py
configbot2.0/configbot.egg-info/: PKG-INFO  SOURCES.txt
configbot2.0/logger/: log.py
configbot2.0/mcp/: manager.py
configbot2.0/skills/: registry.py
configbot2.0/tools/: __init__.py  base.py
configbot2.0/xiaohua/: __init__.py
configbot3.0/: configbot_prompt.txt  pyproject.toml  pyrightconfig.json
configbot3.0/configbot.egg-info/: SOURCES.txt  requires.txt  top_level.txt
configbot3.0/src/configbot/: main.py
configbot3.0/src/configbot/llm/: __init__.py  client.py
configbot3.0/src/configbot/logger/: __init__.py
configbot3.0/src/configbot/mcp/: __init__.py  base.py
configbot3.0/src/configbot/mcp/servers/: filesystem_mcp.py
configbot3.0/src/configbot/skills/builtin/: security_review.py
configbot3.0/src/configbot/tools/: registry.py
configbot3.0/src/configbot/tools/builtin/file/: directory.py
configbot3.0/src/configbot/tools/builtin/system/: __init__.py
configbot3.0/src/configbot/tools/builtin/web/: __init__.py  search.py
configbot3.0/src/configbot/xiaohua/skills/: __init__.py  csv_converter.py  json_validator.py
llm/: client.py
logger/: __init__.py
mcp/: registry.py
skills/: base.py  manager.py
xiaohua/skills/: file_backup.py  text_translator.py
(+22 files in other folders)
